Fix background color of dialogs in dark mode

--- a/src/main/java/org/jabref/gui/Base.css
+++ b/src/main/java/org/jabref/gui/Base.css
@@ -1032,3 +1032,7 @@ We want to have a look that matches our icons in the tool-bar */
     -fx-font-size: 1.5em;
     -fx-padding: 1em 0em 1em 0em;
 }
+
+.dialog-pane {
+    -fx-background-color: -fx-control-inner-background;
+}
