--- a/src/main/java/org/jabref/gui/preferences/PreferencesDialog.css
+++ b/src/main/java/org/jabref/gui/preferences/PreferencesDialog.css
@@ -1,12 +1,12 @@
 #sideMenu {
-    -fx-background-color: -jr-white;
+    -fx-background-color: -fx-control-inner-background;
     -fx-border-color: -fx-outer-border;
     -fx-border-width: 1;
 }
 
 #sideMenu > .virtual-flow > .clipped-container > .sheet > .list-cell {
     -fx-padding: 8 8 8 8;
-    -fx-background: -jr-white;
+    -fx-background: -fx-control-inner-background;
 }
 
 .preferencePaneContainer {
